--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
 <!-- <app-getmethod></app-getmethod> -->
-<app-put></app-put>
+<!-- <app-put></app-put> -->
+<!-- <app-inteceptor></app-inteceptor> -->
+<div style="text-align:center">
+    <h1>
+      Welcome to Lazy Loading Example!
+    </h1>
+  </div>
+  <router-outlet></router-outlet>
+  
